--- a/index.html
+++ b/index.html
@@ -271,26 +271,25 @@
       <div class="container">
         <div class="row text-center g-4 my-2">
           <div class="col-md">
-            <div class="card bg-dark text-light">
+            
+            <div class="card card-hover">
               <div class="card-body text-center">
-                 <div class="h1 mb-3">
+                 <div class="mb-3">
+                   <div class="mb-5">
                   <img src="images/logo.svg" class="img-fluid w-25 pt-5">
+                    <h3 class="card-text">Account-to-Account <span>Advantages</span> </h3>
+                   <p>Control the timing of when you 
+                    collect or disburse payments
+                    with Dwolla as your payment 
+                    service provider. Our cloud, 
+                    API and mobile-first approach
+                    enables faster access to funds,
+                    increased control and 
+                    simplified automation and 
+                    reconciliation.
+                  </p> 
+                  </div> 
                  </div>
-                    <div class="mb-5" style="height: 9rem;">
-                      <h3>Account-to-<br>
-                        Account <br>Advantages
-                     </h3>
-                     <!-- <p>Control the timing of when you 
-                      collect or disburse payments
-                      with Dwolla as your payment 
-                      service provider. Our cloud, 
-                      API and mobile-first approach
-                      enables faster access to funds,
-                      increased control and 
-                      simplified automation and 
-                      reconciliation.
-                    </p>  -->
-                    </div> 
                 </div>
             </div>
           </div>
@@ -353,6 +352,14 @@
       </div>
     </div>   
 </section>
+<div class="image-hover">
+  <img src="./images/hotel_hotel-building@2x.png" alt="image">
+  <div class="caption">
+    <h3>Image Title</h3>
+    <p>Image description</p>
+  </div>
+</div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
