--- a/index.html
+++ b/index.html
@@ -266,32 +266,24 @@
     <div class="container">
       <div class="block-information__background"></div>
       <div class="text-center">
-        <h2>Unclock the Power of the Financial System</h2> 
+        <h2>Unlock the Power of the Financial System</h2> 
       </div>
+      <!-- Adebanjo card addition -->
       <div class="container">
         <div class="row text-center g-4 my-2">
           <div class="col-md">
-            
-            <div class="card card-hover">
+            <div class="card card-hover" style="background-color: #EAEDF3;">
               <div class="card-body text-center">
-                 <div class="mb-3">
-                   <div class="mb-5">
-                  <img src="images/logo.svg" class="img-fluid w-25 pt-5">
-                    <h3 class="card-text">Account-to-Account <span>Advantages</span> </h3>
-                   <p>Control the timing of when you 
-                    collect or disburse payments
-                    with Dwolla as your payment 
-                    service provider. Our cloud, 
-                    API and mobile-first approach
-                    enables faster access to funds,
-                    increased control and 
-                    simplified automation and 
-                    reconciliation.
-                  </p> 
-                  </div> 
-                 </div>
+                <div class="mb-3">
+                  <div class="mb-5">
+                    <img src="images/logo.svg" class="img-fluid w-25 pt-5">
+                    <h3 class="card-text" style="color: #2D2D48";>Account-to-Account <br><span>Advantages</span></h3>
+                    <p style="display: none;">Control the timing of when you collect or disburse payments with Dwolla as your payment service provider. Our cloud, API and mobile-first approach enables faster access to funds, increased control and simplified automation and reconciliation.</p> 
+                  </div>
                 </div>
+              </div>
             </div>
+            <!-- My card addition ends-->
           </div>
           <div class="col-md">
             <div class="col-md">
@@ -352,15 +344,6 @@
       </div>
     </div>   
 </section>
-<div class="image-hover">
-  <img src="./images/hotel_hotel-building@2x.png" alt="image">
-  <div class="caption">
-    <h3>Image Title</h3>
-    <p>Image description</p>
-  </div>
-</div>
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html> 
